--- a/about.html
+++ b/about.html
@@ -101,6 +101,7 @@
                             <li>Email (disarankan tidak lebih dari 3 email)</li>
                             <li>Nomor Telpon/WA (disarankan tidak lebih dari 3)</li>
                             <li>Sosmed</li>
+                            <li>Jam Buka Kemitraan</li>
                         </ul>
                     </div>
                     <div class="col-md-12 mt-4">
