--- a/about.html
+++ b/about.html
@@ -85,7 +85,12 @@
               1. mengedit info tentang sikkriuk
               <div class="row">
                   <div class="col-md-6">
-                        <img src="asset/about.png" class="img-thumbnail" alt="" srcset="">
+                        <div class="ratio ratio-16x9">
+                          <video class="img-thumbnail" controls autoplay loop muted playsinline>
+                            <source src="asset/about.mp4" type="video/mp4">
+                            Browser kamu tidak mendukung tag video.
+                          </video>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <ul>
@@ -112,6 +117,11 @@
                     <div class="col-md-12 mt-4">
                         <h2>Moto/Jargon</h2>
                         <img src="asset/jargon.png" alt="" class="img-thumbnail">
+                        <p>tampilan jargon/moto</p>
+                    </div>
+                    <div class="col-md-12 mt-4">
+                        <h2>Footer</h2>
+                        <img src="asset/footer.png" alt="" class="img-thumbnail">
                         <p>tampilan jargon/moto</p>
                     </div>
                 </div>
