--- a/blog.html
+++ b/blog.html
@@ -103,10 +103,14 @@
                 <li>Isi kolom <strong>Judul</strong> dengan judul artikel.</li>
                 <li>Upload gambar <strong>Thumbnail</strong> (rekomendasi ukuran: <code>1920x390</code>).</li>
                 <li>Upload <strong>Gambar</strong> pendukung untuk konten (rekomendasi ukuran: <code>871x462</code>).</li>
-                <li>Tulis isi konten blog di kolom <strong>Content/Isi</strong> menggunakan editor teks.</li>
+                <li>
+                  Tulis isi konten blog di kolom <strong>Content/Isi</strong> menggunakan editor teks (CKEditor). 
+                  Anda dapat menambahkan elemen seperti paragraf, heading, gambar, tautan, atau HTML snippets untuk mempercantik tampilan artikel.
+                </li>
                 <li>Klik tombol <strong>Save Change</strong> untuk menyimpan artikel.</li>
               </ol>
             </div>
+            
       
             <div class="col-md-12">
               <h3>Tampilan Blog</h3>
